# handsneyes

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: bt-agent.py  build_longjump_dataset.py  build_pointer_accel_dataset.py  canary_macos_direct.py  canary_pointer_accel.py  collect_cursor_detector_labels.py  collect_macos_direct.py  collect_pointer_accel.sh  collect_pointer_accel_safe.sh  collect_targeted.sh  explore_pointer_accel.py  explore_pointer_accel_v2.py  host_collect.py  reconnect.sh  retrain_homer.py  target_bt_reconnect.md  target_bt_reconnect.sh  target_bt_reconnect_macos.sh  train_cursor_detector.py  train_pointer_accel.py
src/handsneyes/: cli.py
src/handsneyes/core/agents/: base.py  click.py  context.py  controller.py  cursor.py  executor.py  focus.py  login.py  navigate.py  scroll.py  target.py  type_text.py  verify.py  wake.py
src/handsneyes/core/capture/: __init__.py  base.py  discover.py  screen.py  webcam.py
src/handsneyes/core/vault/: __init__.py
src/handsneyes/core/vision/: __init__.py  calibration.py  closed_loop_homer.py  cursor_detector.py  cursor_finder.py  cursor_reader.py  dino_snap.py  homer_prompts.py  imaging.py  longjump.py  ocr_finder.py  pointer_accel.py  session_adapter.py  text_targeting.py  visual_servo_homer.py
src/handsneyes/io/keyboard/: __init__.py  base.py  platform_keyboard.py
src/handsneyes/io/keyboard/backends/: http.py
src/handsneyes/io/mouse/: __init__.py  base.py
src/handsneyes/io/mouse/backends/: http.py
src/handsneyes/pi/: bt_hid.py  hid_codes.py  hid_writer.py  server.py
src/handsneyes/targets/: __init__.py
src/handsneyes/ui/: factory.py  frame_store.py  log_bus.py  paste_protocol.py  runner.py  server.py
src/handsneyes/ui/static/: app.js  index.html  styles.css
tests/: test_cli_smoke.py  test_core_agents.py  test_core_capture.py  test_core_vault.py  test_core_vision.py  test_executor.py  test_io_keyboard.py  test_io_mouse.py  test_linux_gnome_adapter.py  test_login_agent.py  test_macos_adapter.py  test_platform_adapter.py  test_platform_keyboard.py  test_platforms_registry.py  test_smoke.py  test_targets_registry.py  test_tier1_agents.py  test_tier2_agents.py  test_tier3_agents.py  test_ui_smoke.py
